add _site/ so we can serve w/ gh-pages

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-url: https://y7kim.github.io
+url: https://custartupcapstone.com
 baseurl: ""
 
 # Site settings
 title: CU Boulder Startup Capstone
-email: your-email@domain.com
+email: ""
 description: "2017 Computer Science Entrepreneurial Capstone at the University of Colorado Boulder"
 
 
