--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,10 @@ people:
     - title: linkedin
       url: https://www.linkedin.com/in/zachnies
 
+- name: Joshua Abdulla
+  pic: Josh
+  position: Faculty member - Department of Computer Science
+
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: github
